--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "homepage": "https://github.com/TaDangLam/nodejs_project#readme",
     "dependencies": {
         "express": "^4.18.1",
-        "express-handlebars": "^5.1.0"
+        "express-handlebars": "^5.1.0",
+        "mongoose": "^6.6.5"
     },
     "devDependencies": {
         "husky": "^8.0.1",
